fixing share page grid and white space between navbar and stepind

--- a/src/containers/views/KnutselTips/KnutselTips.scss
+++ b/src/containers/views/KnutselTips/KnutselTips.scss
@@ -59,3 +59,6 @@
 .tip-difficulty-card {
   margin-bottom: 2rem;
 }
+.knutseltips{
+  padding-top: 30px;
+}
